# helm-charts

./: .gitignore  .prettierignore  CLAUDE.md  GEMINI.md  INTEGRATION_SUMMARY.md  Makefile  README.md  charts-data.json  claude_plan.md  conftest.py  cr.yaml  example.yaml  index.html  index.yaml  pyproject.toml  pytest.toml
.github/: copilot-instructions.md
.github/instructions/: chart-gitops.instructions.md
.github/scripts/: version-checker.sh  version_checker.sh
.github/workflows/: gh-pages.yml  helm.yml
charts/: test_helpers.py
charts/audiobookshelf/: Chart.yaml  Makefile  NOTES.txt  README.md  values.yaml
charts/backup-job/: Chart.yaml  values.yaml
charts/changedetection-io/: Chart.yaml  README.md  values.yaml
charts/enshrouded/: Chart.yaml  README.md  values.yaml
charts/external-secret-resources/: Chart.yaml  values.yaml
charts/forgejo/: Chart.yaml  NOTES.txt  README.md  values.yaml
charts/foundryvtt/: Chart.yaml  README.md  values.yaml
charts/fvtt-dndbeyond-companion/: Chart.yaml  README.md  values.yaml
charts/game-tools/: Chart.yaml  README.md
charts/gitops-tools/: Chart.yaml  README.md
charts/grafana/: Chart.yaml  values.yaml
charts/helm-hub/: Chart.yaml  README.md  values.yaml
config/: Makefile
docs/: CONTRIBUTING.md  README.md  argocd-gitops.md  guide-pvc-cleaning.md
scripts/: generate-charts-skill.py  lint.sh  validate_yaml.py
tools/: chart_tasks.py  fix_chart_deps.py  github_utils.py  manager.py  release_charts.py  split_manifests.py  update_readme_charts.py  upgrade.py  validate_yaml.py  version_checker.py
(+291 files in other folders)
