[project]
name = "helm-charts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "ruff>=0.14.10",
    "pytest",
    "meilisearch",
    "rich",
    "kubernetes",
]

[tool.uv.workspace]
members = ["charts/meilisearch/resources"]
